# metaframe

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: run-pylint.yaml  run-tests.yaml  run_tests.yaml  testing_pylint.yaml
coverage_html/: class_index.html  function_index.html  index.html  status.json  z_36f028580bb02cc8_test_read_py.html  z_36f028580bb02cc8_test_timing_py.html  z_8e0c3affb93da6f8___init___py.html  z_8e0c3affb93da6f8_reader_py.html  z_8e0c3affb93da6f8_timing_py.html
filtering scripts/: filtering.py  filtering_helper.py
src/mdframe/: __init__.py  analysis.py  empty-nutrition-facts.csv  filtering.py  quality1-scans.csv  reader.py  schema.json  schema.py  timing.py
src/mdframe/data/: 0000_apple_1.toml  0000_apple_2.toml  0000_apple_3.toml  0001_biscuit_0.toml  0001_biscuit_1.toml  0002_banana_2.toml  0003_strawberry_0.toml  0004_carrot_1.toml  0004_carrot_10.toml  0004_carrot_2.toml  0004_carrot_6.toml  0004_carrot_8.toml  0005_cookie_1.toml  0005_cookie_2.toml  0006_brownie_0.toml  0006_brownie_2.toml  0007_bagel_1.toml  0007_bagel_3.toml  0007_bagel_4.toml  0008_muffin_1.toml  0008_muffin_2.toml  0008_muffin_4.toml  0008_muffin_5.toml  0009_tomato_2.toml  0010_tomato_0.toml  0010_tomato_1.toml  0011_chickennugget_1.toml  0011_chickennugget_3.toml  0012_croissant_0.toml  0013_doughnut_0.toml  0013_doughnut_1.toml  0013_doughnut_2.toml  0013_doughnut_3.toml  0014_waffle_1.toml  0014_waffle_2.toml  0015_cinnamonbun_0.toml  0015_cinnamonbun_2.toml  0016_almond_0.toml  0016_almond_4.toml  0018_yogurt_0.toml  (+84 more)
src/mdframe/data_dir/: 0000_apple_0.toml  0001_biscuit_2.toml  0001_biscuit_3.toml  0002_banana_0.toml  0002_banana_1.toml  0002_banana_3.toml  0003_strawberry_1.toml  0003_strawberry_2.toml  0004_carrot_0.toml  0004_carrot_11.toml  0004_carrot_2.toml  0004_carrot_3.toml  0004_carrot_4.toml  0004_carrot_5.toml  0004_carrot_7.toml  0004_carrot_9.toml  0005_cookie_0.toml  0006_brownie_1.toml  0007_bagel_0.toml  0007_bagel_2.toml  0008_muffin_0.toml  0008_muffin_3.toml  (+94 more)
src/metaframe/: __init__.py
test/: test_analysis.py  test_basic.py  test_read.py  test_timing.py
test/data_dir/: data_file.toml  data_file2 2.toml  data_file2.toml
test/flattened_data/: 00_flattened_file.toml  01_flattened_file.toml  02_flattened_file.toml
test/invalid_data_dir/: invalid_data_file.toml
(+4 files in other folders)
