[tool.poetry]
name = "mdframe"
version = "0.1.0"
description = "Simple metadata viewer for datasets utilizing per-file metadata descriptors"
authors = ["Krzysztof J. Czarnecki <kjczarne@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mdframe", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
toml = "^0.10.2"
jsonschema = "^4.21.1"
rich = "^13.7.1"
urllib3 = "^2.2.1"
coverage = "^7.5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
pytest = "^7.4.2"

[tool.poetry.scripts]
mdfr = "mdframe.reader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 100
disable = [
  "missing-docstring",
  "bad-whitespace",
  "bad-continuation",
]
